tests/test8.dist
program test8;

var arr[10][10]:float;
main {
  arr[7] = 7.7;
}
// resultado esperado
// TypeError: ('Variable: ', 'arr', ' is a two dimention array')
